Se agrega funcionalidad

--- a/EmployeeCentralApiRest/appsettings.Development.json
+++ b/EmployeeCentralApiRest/appsettings.Development.json
@@ -4,5 +4,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "conn": "Data Source=357113L90279897;Initial Catalog=Central;Integrated Security=True;TrustServerCertificate=True"
+  },
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "TG9zIHByb2dyYW1kb3JlcyBzb24gbGEgbGV5",
+    "Issuer": "http://some.mx",
+    "Audience": "codepedia.info"
   }
 }
