--- a/EmployeeCentralApiRest/appsettings.json
+++ b/EmployeeCentralApiRest/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "conn": "Data Source=357113L90279897;Initial Catalog=Central;Integrated Security=True;TrustServerCertificate=True"
+  },
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "TG9zIHByb2dyYW1kb3JlcyBzb24gbGEgbGV5",
+    "Issuer": "http://some.mx",
+    "Audience": "codepedia.info"
+  }
 }
